# tessera

./: .cursorrules  FEATURE_AUDIT.md  Makefile  NEXT_STEPS.md  README.md
.github/workflows/: ci-cli.yml  release-cli.yml
apps/aresa-studio/: next.config.ts  package-lock.json  package.json
apps/aresa-studio/app/: layout.tsx  page.tsx
apps/aresa-studio/app/terminal/: page.tsx
apps/aresa-studio/components/: DemoBanner.tsx  DemoTerminal.tsx  Sidebar.tsx
apps/aresa-studio/lib/: api.ts  demo-data.ts
apps/aresa-studio/public/: manifest.json
apps/aresadb-studio/: package-lock.json  package.json  tailwind.config.js
apps/aresadb-studio/app/: globals.css  layout.tsx
apps/aresadb-studio/components/dashboard/: Sidebar.tsx
apps/aresadb-studio/lib/: sidebar.tsx  theme.tsx
apps/aresadb-studio/public/: manifest.json
apps/aresalab/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
apps/aresalab/app/: globals.css  layout.tsx  page.tsx
apps/aresalab/app/books/: page.tsx
apps/aresalab/app/components/: Callout.tsx  CodeBlock.tsx  MarkdownRenderer.tsx  Navigation.tsx  ThemeToggle.tsx  Theorem.tsx
apps/aresalab/app/publications/: page.tsx
apps/aresalab/app/utils/: theme-context.tsx
apps/aresalab/content/books/: book_1_mathematical_awakening.md  book_2_practical_ml.md
apps/aresalab/content/publications/: coordinate-embedding.mdx  geoai-agentic-flow.mdx  multi-agent-coordination.mdx
apps/aresalab/lib/: mdx.ts  publications.ts
apps/fire-safety/: .gitignore  BLOB_SETUP.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  upload-blob.js
apps/fire-safety/app/: globals.css  layout.tsx  page-new.tsx  page.tsx
apps/fire-safety/app/components/: AdvancedHotspotMap.tsx  CallToAction.tsx  CollapsibleSidebar.tsx  DashboardFooter.tsx  FalseAlarmChallenge.tsx  FalseAlarmChart.tsx  FalseAlarmPieChart.tsx  GradientHeader.tsx  HeatmapViz.tsx  HourlyChart.tsx  IncidentChart.tsx  InteractiveIncidentMap.tsx  KeyStatsGrid.tsx  MapWrapper.tsx  MunicipalHotspotsChart.tsx  MunicipalityChart.tsx  NarrativeSection.tsx  PriorityChart.tsx  PriorityTreemapChart.tsx  SearchableMultiSelect.tsx  SeasonalChart.tsx  SeasonalPatternsChart.tsx  SectionNav.tsx  Sidebar.tsx  TreemapPriority.tsx  TrendsChart.tsx  YearlyTrendsChart.tsx  (+1 more)
apps/fire-safety/lib/: fireData.ts
docs/: fire-safety.html  index.html  manufacturing.html  network.html  spotify.html
publications/: README.md  _diagram_style.py
publications/coordinate_embedding/: 1_introduction.qmd  2_embedding_theory.qmd  3_distance_preservation.qmd  4_implementation.qmd  5_experiments.qmd  6_conclusion.qmd  7_use_case.qmd  _quarto.yml  index.qmd  references.bib
publications/geoai_agentic_flow/: 10_use_case.qmd  1_introduction.qmd  2_mathematical_foundations.qmd  3_coordinate_embedding.qmd  4_spatial_neural_network.qmd  5_multi_agent_system.qmd  6_experiments.qmd  7_results.qmd  8_conclusion.qmd  9_appendix.qmd  _quarto.yml  index.qmd  references.bib
publications/multi_agent_coordination/: 1_introduction.qmd  2_coordination_theory.qmd  3_consensus_proofs.qmd  4_agent_specialization.qmd  5_experiments.qmd  6_conclusion.qmd  7_use_case.qmd  _quarto.yml  index.qmd  references.bib
scripts/: generate_mdx_previews.py  split_book_into_chapters.py
tools/aresa-cli/: CONTRIBUTING.md  Cargo.toml  README.md
tools/aresa-cli/homebrew/: aresa.rb
tools/aresa-cli/src/: error.rs  lib.rs  main.rs
tools/aresa-cli/src/config/: credentials.rs  mod.rs  sources.rs  tests.rs
tools/aresa-cli/src/connectors/: bigquery.rs  clickhouse.rs  duckdb.rs  filesystem.rs  gcs.rs  mod.rs  mysql.rs  postgres.rs  s3.rs  sqlite.rs  tests.rs
tools/aresa-cli/src/nlp/: intent.rs  mod.rs  parser.rs  tests.rs
tools/aresa-cli/src/output/: mod.rs  table.rs  theme.rs
tools/aresa-cli/src/query/: executor.rs  mod.rs
tools/aresa-cli/tests/: integration_tests.rs
tools/aresadb/: Cargo.toml  README.md
tools/aresadb/benches/: storage_bench.rs
tools/aresadb/src/: lib.rs  main.rs
tools/aresadb/src/ai/: migration_suggest.rs  mod.rs  nlp.rs
tools/aresadb/src/cli/: commands.rs  config.rs  mod.rs  repl.rs
tools/aresadb/src/output/: graph_viz.rs  json.rs  mod.rs  table.rs
tools/aresadb/src/query/: executor.rs  mod.rs  parser.rs  planner.rs
tools/aresadb/src/schema/: migration.rs  mod.rs  registry.rs
tools/aresadb/src/storage/: bucket.rs  cache.rs  local.rs  mod.rs  node.rs  parallel.rs
(+48 files in other folders)
