[package]
name = "aresadb"
version = "0.1.0"
edition = "2021"
authors = ["Yevheniy Chuba <yevheniyc@gmail.com>"]
description = "Unified AI-native database engine - KV, Graph, and Relational in one"
license = "MIT"
repository = "https://github.com/yoreai/aresa"
keywords = ["database", "graph", "key-value", "ai", "natural-language"]
categories = ["database", "command-line-utilities"]
readme = "README.md"

[dependencies]
# Storage Engine
redb = "2.1"                    # Embedded B+ tree database (ACID, fast)
rkyv = { version = "0.7", features = ["validation", "strict"] }  # Zero-copy serialization
bytecheck = "0.6"               # Validation for rkyv
object_store = { version = "0.9", features = ["aws", "gcp"] }  # S3/GCS/Azure abstraction
moka = { version = "0.12", features = ["sync"] }  # High-performance concurrent cache
bytes = "1.5"                   # Byte buffer utilities

# Query Engine
sqlparser = "0.43"              # SQL parsing
petgraph = "0.6"                # Graph algorithms

# CLI Framework
clap = { version = "4.4", features = ["derive", "env", "color"] }
rustyline = "14.0"              # REPL with history and completion
rustyline-derive = "0.10"       # Helper derive macros

# Output & Display
tabled = "0.15"                 # Beautiful table output
colored = "2.1"                 # Colored terminal output
indicatif = "0.17"              # Progress bars and spinners
console = "0.15"                # Terminal utilities

# Async & Concurrency
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
crossbeam = "0.8"               # Lock-free data structures
parking_lot = "0.12"            # Fast mutexes/rwlocks

# AI Integration
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Filesystem
walkdir = "2.4"
regex = "1.10"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
url = "2.5"
async-trait = "0.1"
humansize = "2.1"

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1

[[bin]]
name = "aresadb"
path = "src/main.rs"

[[bench]]
name = "storage_bench"
harness = false


